--- a/css/styles.css
+++ b/css/styles.css
@@ -24,20 +24,9 @@ body {
 .pokedex-list {
     text-align: center;
     margin-top: 60px;
-}
 
-
-/* temp */
-
-.pokemon-button-wrapper {
-  margin: 5px 0;
-  height:70px;
-  min-width: 240px;
-  display:flex;
-  flex-direction:column;
-  align-items: center;
-  justify-content: space-between;
-  flex: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 
