--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,16 @@ body {
     color: white;
     padding: 15px 32px;
     margin: 3px auto;
-    width: 17%;             
+    width: 80%;             
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;                       
+}
+
+.pokedex-list-container {
+  height: 90%;
+  width: 90%;
 }
 
 .pokedex-list {
