--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
+    /* padding: 15px 32px; */
     margin: 3px auto;
     width: 80%;             
     text-align: center;
@@ -24,6 +24,7 @@ body {
 .pokedex-list-container {
   height: 90%;
   width: 90%;
+  margin: auto;
 }
 
 .pokedex-list {
