--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,8 @@ ul, li {
     border: none;
     color: white;
     margin: 3px auto;
-    /* padding: 15px 32px; */
-    width: 80%;             
+    padding: 15px 32px;
+    width: 80%;       
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -28,10 +28,12 @@ ul, li {
   height: 90%;
   width: 90%;
   margin: auto;
+  justify-content: center;
 }
 
 .pokedex-list {
     text-align: center;
+    margin: auto;
     margin-top: 60px;
 
     display: grid;
