--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
 
     width: 90vw;
     height: 90vh;
-    text-align: left;
+    /* text-align: left; */
     margin: 10px 20px;
 
     justify-content: center;
@@ -20,8 +20,7 @@ ul, li {
     color: white;
     margin: 3px auto;
     /* padding: 15px 32px; */
-    width: 80%;
-    height: 50%;       
+    width: 80%;     
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -32,7 +31,6 @@ ul, li {
   height: 90%;
   width: 90%;
   margin: 0 auto;
-  justify-content: center;
 }
 
 .pokedex-list {
