--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,9 @@ ul, li {
     border: none;
     color: white;
     margin: 3px auto;
-    /* padding: 15px 32px; */
-    width: 80%;     
+    padding: 15px 32px;
+    width: 80%;
+    height: 100%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
